# omscript

./:     .clang-format  .clang-tidy  .editorconfig  .gitignore  .tmp_ref_part1.md  .tmp_ref_part2.md  CHANGELOG.md  CMakeLists.txt  CODE_QUALITY_REVIEW.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  EGRAPH_OPTIMIZATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_REFERENCE.md  LICENSE  MEMORY_DIAGRAM.md  MEMORY_MANAGEMENT.md  OPTIMIZATIONS.md  README.md  RUNTIME_REPORT.md  abs_pre  arithmetic  arrins.om  arrins_bin  bench.c  bench.om  bench_c  bench_om  benchmark_pgo.sh  crash_test.om  crash_test_bin  factorial  fibonacci  fulltest.om  fulltest_bin  (+50 more)
.cache/clangd/index/: ast.cpp.8D8A8107A50E54EA.idx  ast.h.BC45355187A39AB3.idx  ast_test.cpp.F2DF04A00BC7EF45.idx  bytecode.cpp.D35F1E4BD92BD96F.idx  bytecode.h.9064FE84CB12C182.idx  bytecode_test.cpp.8A8B872CE0B89C02.idx  codegen.cpp.B618FD5FB6B40485.idx  codegen.h.A8AB7D917855A5DC.idx  codegen_test.cpp.B93D2674F5FCC878.idx  compiler.cpp.A78FC692D939B91E.idx  compiler.h.FF734124DCDB0E57.idx  jit.cpp.4971E5FCED057D59.idx  jit.h.03326828B1102F82.idx  lexer.cpp.FCCDBAEA688A3DAC.idx  lexer.h.0303627F49616D9F.idx  lexer_test.cpp.B0A20A70CB39593C.idx  main.cpp.436802E2436ACAE8.idx  parser.cpp.A941F854BCEAD03E.idx  parser.h.BDC3246F7273C227.idx  parser_test.cpp.266D358A24A35DD3.idx  refcounted.h.F9FA47A6D2D9FEF3.idx  refcounted_test.cpp.4D8F0560E163A2C3.idx  value.cpp.2113434BC570F236.idx  value.h.23B3D7FF31EFE2AC.idx  value_test.cpp.B663E59FF89DB49F.idx  vm.cpp.171731E1DF4CCA2E.idx  vm.h.7B8663D9F9EBD816.idx  vm_test.cpp.B40B319DF8736ED1.idx
.github/workflows/: build-release.yml  ci.yml  main.yml  release.yml
_codeql_build_dir/: CTestTestfile.cmake  ast_test  bytecode_test  lexer_test  parser_test  refcounted_test  value_test  vm_test
build-fix/: DartConfiguration.tcl
build-tests2/: DartConfiguration.tcl  compile_commands.json
build-tests3/: DartConfiguration.tcl  compile_commands.json  omsc_tests[1]_include.cmake  omsc_tests[1]_tests.cmake
build2/: DartConfiguration.tcl  compile_commands.json
build_tidy/: ast_test  compile_commands.json  deopt_test  diagnostic_test  jit_profiler_test  lexer_test  refcounted_test  value_test
examples/: abs_test.om  addr_of_test.om  advanced.om  align_annotation_test.om  alloc_zero_args_test.om  allocator_annotation_test.om  arb_int_test.om  arithmetic.om  array_assign_test.om  array_builtins_test.om  array_compound_test.om  array_copy_test.om  array_fill_negative_test.om  array_higher_order_test.om  array_incdec_test.om  array_index_arithmetic_test.om  array_return_test.om  array_shift_unshift_test.om  array_string_builtins_test.om  array_test.om  array_utility_test.om  arrow_operator_test.om  as_operator_test.om  assume_stmt_test.om  assume_unreachable_expect_test.om  bare_fnptr_test.om  bench_suite.om  benchmark.om  benchmark_jit_aot.om  benchmark_loops_math.c  benchmark_loops_math.om  benchmark_loops_math.rs  bigint_test.om  bitwise.om  bitwise_assign_test.om  bitwise_builtins_test.om  block_comments.om  bool_test.om  borrow_mut_syntax_test.om  borrow_mut_test.om  (+287 more)
examples/modules/: circular_a.om  circular_b.om  math_utils.om  string_utils.om
include/: alg_simp_pass.h  ast.h  ast_arena.h  bigint.h  bigint_runtime.h  borrow_checker.h  build_graph.h  build_system.h  bytecode.h  cfctre.h  codegen.h  compiler.h  const_fold_pass.h  copy_prop_pass.h  cse_pass.h  dce_pass.h  diagnostic.h  egraph.h  ersl.h  hardware_graph.h  hgoe_egraph.h  http_runtime.h  ipof_pass.h  lexer.h  loop_transform_framework.h  opt_context.h  opt_contracts.h  opt_orchestrator.h  opt_pass.h  optimization_manager.h  parser.h  pass_utils.h  polyopt.h  preprocessor.h  program_analysis.h  project.h  rlc_pass.h  sdr_pass.h  sir.h  superoptimizer.h  (+6 more)
runtime/: aot_profile.cpp  aot_profile.h  deopt.cpp  deopt.h  jit.cpp  jit.h  jit_profiler.cpp  jit_profiler.h  refcounted.h  value.cpp  value.h  vm.cpp  vm.h
src/: alg_simp_pass.cpp  ast.cpp  bigint.cpp  bigint_runtime.cpp  borrow_checker.cpp  build_graph.cpp  build_system.cpp  bytecode.cpp  cfctre.cpp  codegen.cpp  codegen.om  codegen_builtins.cpp  codegen_expr.cpp  codegen_opt.cpp  codegen_stmt.cpp  codegen_test.om  compiler.cpp  const_fold_pass.cpp  copy_prop_pass.cpp  cse_pass.cpp  dce_pass.cpp  egraph.cpp  egraph_optimizer.cpp  egraph_optimizer.om  egraph_optimizer_test.om  emit_ir_test.om  ersl.cpp  funcptr_runtime.c  hardware_graph.cpp  hgoe_egraph.cpp  http_runtime.c  infer_test.om  ipof_pass.cpp  lexer.cpp  lexer.om  lexer_test.om  lexer_test2.om  lexer_test3.om  loop_transform_framework.cpp  main.cpp  (+46 more)
tests/: ast_test.cpp  benchmark_test.cpp  bytecode_test.cpp  codegen_test.cpp  deopt_test.cpp  diagnostic_test.cpp  egraph_test.cpp  hardware_graph_test.cpp  jit_profiler_test.cpp  lexer_test.cpp  parser_test.cpp  perf_comparison_test.cpp  project_test.cpp  refcounted_test.cpp  rlc_pass_test.cpp  sir_test.cpp  superoptimizer_test.cpp  value_test.cpp  vm_test.cpp
user-packages/: README.md  index.json
user-packages/algorithms/: algorithms.om  package.json
user-packages/arrays/: arrays.om  package.json
user-packages/bitwise/: bitwise.om  package.json
user-packages/combinatorics/: combinatorics.om  package.json
user-packages/conversion/: conversion.om  package.json
user-packages/counter/: counter.om  package.json
user-packages/functional/: functional.om  package.json
user-packages/geometry/: geometry.om  package.json
user-packages/hash/: hash.om  package.json
user-packages/math/: math.om  package.json
user-packages/matrix/: matrix.om  package.json
user-packages/numbtheory/: numbtheory.om  package.json
user-packages/physics/: package.json  physics.om
user-packages/queue/: package.json  queue.om
user-packages/random/: package.json  random.om
user-packages/search/: package.json  search.om
user-packages/sorting/: package.json  sorting.om
user-packages/stack/: package.json  stack.om
user-packages/statistics/: package.json  statistics.om
user-packages/strings/: package.json  strings.om
